# dataplex-labs

./: .gitignore
lineage-reasoning-agent/: pyproject.toml
lineage-reasoning-agent/lineage_reasoning_agent/: __init__.py  graph_store.py  main.py  tools.py  verify.py
lineage-reasoning-agent/tests/: __init__.py  test_agent.py  test_graph.py
policy-as-code-agent/policy_as_code_agent/: agent.py
policy-as-code-agent/policy_as_code_agent/prompts/: instructions.md  remediation.md
policy-as-code-agent/tests/unit/: test_remediation.py
